# DL

./: .gitignore  Neural Net for Linear Regression.ipynb  notas.txt  pyproject.toml
Drive net/: Img utils.py  Nets.py  Train.py  Utils.py  img_augmentation.py  model.json  test_model.py
U-Net CGAN/: Img utils.py  Nets.py  Notebook.ipynb  Train.py  Utils.py  custom_layers.py  densenet121.py  img_augmentation.py  model.json  test_inference.py  test_model.py
benchmark net/: .gitignore  Img utils.py  Nets.py  Train.py  Utils.py  generator.py  model.json  test_model.py
testing/: gpu.py  image_slicer.py  keras_first_network.py  load_model.py  mnist_covnet.py  mnsit_gan.py  model.h5  model.json  msnit_image_generator.py
testing/Cancer gan/: cancer_gan.py
tut_dcgan/: Train.py  eval.py
zhao-li-cheng/code/: Net.py  readme
