[tool.poetry]
name = "dl"
version = "0.1.0"
description = ""
authors = ["Alejandro Scopa <alejandro.scopa@uala.com.ar>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
keras = "^2.9.0"
tensorflow-macos = "^2.9.2"
numpy = "^1.23.0"
Pillow = "^9.1.1"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
colab = "^1.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

